FIX:251009 디자인 수정1

--- a/products/Cema.html
+++ b/products/Cema.html
@@ -33,11 +33,7 @@
             gap: 1rem;
           "
         >
-          <img
-            src="../assets/images/brandLogos/cema.png"
-            alt="Cema 로고"
-            style="height: 3rem; width: auto"
-          />
+        
           Cema
         </a>
       </h1>
@@ -50,7 +46,7 @@
           class="product-card"
         >
           <img src="../assets/images/mainPage/cema/bearing.png" alt="bearing" />
-          <div class="product-name">bearing</div>
+          <div class="product-name">스피드 베어링</div>
         </a>
       </div>
     </main>
