--- a/assets/header.html
+++ b/assets/header.html
@@ -1,17 +1,22 @@
 <header>
   <nav>
-    <a href="/index.html" class="logo">BNB Sports</a>
-    <ul>
-      <!-- 드롭다운 메뉴 시작 -->
+    <ul class="nav-left">
       <li class="dropdown">
-        <a href="/products/SkatingStart.html">제품 소개</a>
+        <a href="/products/SkatingStart.html">
+          <img src="/assets/images/mainPage/menu_icon.png" alt="줄 세개">
+          메뉴
+        </a>
         <ul class="dropdown-content">
           <li><a href="/products/SkatingStart.html">SkatingStart</a></li>
           <li><a href="/products/RoadStar.html">RoadStar</a></li>
           <li><a href="/products/Cema.html">Cema</a></li>
         </ul>
       </li>
-      <!-- 드롭다운 메뉴 끝 -->
+    </ul>
+
+    <a href="/index.html" class="logo">BNB Sports</a>
+
+    <ul class="nav-right">
       <li>
         <a href="https://smartstore.naver.com/bnb_sports/category/2c9d17ff3c834d29b9be2411bdc826c6?cp=1" target="_blank">스마트스토어</a>
       </li>
