--- a/products/SkatingStart.html
+++ b/products/SkatingStart.html
@@ -16,9 +16,6 @@
         <a href="https://smartstore.naver.com/bnb_sports/category/47d9288759ce4244878dee499c262e53?cp=1" 
           target="_blank" 
           style="color: #111; text-decoration: none; display: flex; align-items: center; gap: 1rem;">
-          <img src="../assets/images/brandLogos/skatingstart.png" 
-              alt="skatingstart 로고" 
-              style="height: 3rem; width: auto;" />
           SkatingStart
         </a>
       </h1>
@@ -37,17 +34,17 @@
 
         <a href="https://smartstore.naver.com/bnb_sports/category/5c07982b0df547cd8b5fb58ec7857fac?cp=1" target="_blank" class="product-card">
           <img src="../assets/images/products/skatingStart/Custom boots/CustomBoots.jpg" alt="Custom Boots" />
-          <div class="product-name">Custom Boots</div>
+          <div class="product-name">커스텀 부츠</div>
         </a>
 
         <a href="https://smartstore.naver.com/bnb_sports/category/991424585c45476a8d163b077f0e6b6d?cp=1" target="_blank" class="product-card">
           <img src="../assets/images/products/skatingStart/Frame/Frame.jpg" alt="Frame" />
-          <div class="product-name">Frame</div>
+          <div class="product-name">스피드 프레임</div>
         </a>
 
         <a href="https://smartstore.naver.com/bnb_sports/category/f495b34ee7a64c999e1b8322da8c3fe6?cp=1" target="_blank" class="product-card">
           <img src="../assets/images/products/skatingStart/Wheel/Wheel.png" alt="Wheel" />
-          <div class="product-name">Wheel</div>
+          <div class="product-name">스피드 휠</div>
         </a>
       </div>
     </main>
