--- a/assets/header.html
+++ b/assets/header.html
@@ -3,8 +3,7 @@
     <ul class="nav-left">
       <li class="dropdown">
         <a href="/products/SkatingStart.html">
-          <img src="/assets/images/mainPage/menu_icon.png" alt="줄 세개">
-          메뉴
+          <img src="/assets/images/mainPage/menu_icon.png" alt="줄 세개">메뉴
         </a>
         <ul class="dropdown-content">
           <li><a href="/products/SkatingStart.html">SkatingStart</a></li>
@@ -17,12 +16,8 @@
     <a href="/index.html" class="logo">BNB Sports</a>
 
     <ul class="nav-right">
-      <li>
-        <a href="https://smartstore.naver.com/bnb_sports/category/2c9d17ff3c834d29b9be2411bdc826c6?cp=1" target="_blank">스마트스토어</a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/bnb___sports" target="_blank">인스타그램</a>
-      </li>
+      <li><a href="https://smartstore.naver.com/..." target="_blank">스마트스토어</a></li>
+      <li><a href="https://www.instagram.com/bnb___sports" target="_blank">인스타그램</a></li>
     </ul>
   </nav>
 </header>
