--- a/assets/header.html
+++ b/assets/header.html
@@ -2,11 +2,8 @@
   <nav>
     <ul class="nav-left">
       <li class="dropdown">
-        <a href="/products/SkatingStart.html">
-          <img src="/assets/images/mainPage/menu_icon.png" alt="줄 세개">메뉴
-        </a>
+        <a href="/products/SkatingStart.html">SkatingStart</a>
         <ul class="dropdown-content">
-          <li><a href="/products/SkatingStart.html">SkatingStart</a></li>
           <li><a href="/products/RoadStar.html">RoadStar</a></li>
           <li><a href="/products/Cema.html">Cema</a></li>
         </ul>
